# organvm-ontologia

./: AGENTS.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  README.md  pyproject.toml  resolve.py
.github/workflows/: ci.yml
docs/: governance-cadence-reconcile.md  governance-state-seed.md
schemas/: governance-entity-crosswalk.v1.schema.json  governance-state-seed.v1.schema.json
src/ontologia/cli/: __init__.py  __main__.py
src/ontologia/entity/: external_repo.py  identity.py
src/ontologia/events/: bus.py
src/ontologia/governance/: __init__.py  cadence_contract.py  cadence_owner.py  cadence_predicate.py  memory.py  reconcile.py  state_seed.py
src/ontologia/metrics/: observations.py
src/ontologia/registry/: store.py
src/ontologia/sensing/: _bifrons.py  external_repo_sensor.py  github_star_sensor.py  normalization.py  scanner.py
src/ontologia/structure/: exchange_relations.py
tests/: test_external_repo_relations.py  test_git_sensor.py  test_github_star_sensor.py  test_governance_cadence.py  test_governance_memory.py  test_governance_state_seed.py  test_query.py  test_registry_store.py
