[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "organvm-ontologia"
version = "0.1.0"
description = "Adaptive structural registry with entity identity, temporal metrics, and governed evolution"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pyright>=1.1"]

[project.scripts]
ontologia = "ontologia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "PTH", "RET", "SIM", "COM", "PL"]
ignore = [
    "E501",
    "E741",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLC0415",
    "PLR2004",
    "PLW0602",
    "PLW0603",
    "PLW2901",
]

[tool.ruff.lint.isort]
known-first-party = ["ontologia"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
